[package]
name = "multi_version"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
semver = { version = "1.0" }
proc-macro2 = { version = "1.0" }
syn = { version = "1.0", features = ["extra-traits"] }
quote = { version = "1.0" }